fix eventspage alignment

--- a/src/components/events/EventsFilter.css
+++ b/src/components/events/EventsFilter.css
@@ -4,7 +4,7 @@ body {
 }
 
 .card-division {
-  margin: 10px;
+  margin: 10px 0;
   padding: 2vw;
   width: 100%;
 }
